# libchat

./: Makefile.am  README.md  TODO  client.c  config.h.in~  configure.ac  configure~  meson.build  peer.c  server.c
tests/: Makefile.am  TODO  client_test.cpp  server_test.cpp  test1.cpp  test4.cpp
